--- a/panitia/templates/schedule_list.html
+++ b/panitia/templates/schedule_list.html
@@ -65,7 +65,7 @@
               type="button"
               class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
             >
-              Next
+            <a href="{% url 'panitia:submit_pertandingan' %}">Next</a>
             </button>
           </td>
         </tr>
