--- a/panitia/templates/buat_pertandingan.html
+++ b/panitia/templates/buat_pertandingan.html
@@ -6,7 +6,6 @@
   {% include 'navbar_panitia.html' %}
   <h1 class="text-3xl text-center font-bold my-6">PEMBUATAN PERTANDINGAN</h1>
   <form
-    action="#"
     method="POST"
     class="flex flex-col items-center justify-center"
   >
@@ -14,13 +13,13 @@
     <div class="my-4">
       <label for="stadium" class="mr-2 font-bold">Stadium:</label>
       <select
-        name="stadium"
+        name="nama_stadium"
         id="stadium"
         class="px-2 py-1 border border-gray-300 rounded-md"
       >
-        <option value="Stadium 1">Stadium 1</option>
-        <option value="Stadium 2">Stadium 2</option>
-        <option value="Stadium 3">Stadium 3</option>
+        {% for row in ds %}
+        <option value="Stadium">{{row.0}}</option>
+        {% endfor %}
       </select>
     </div>
     <div class="my-4">
@@ -37,7 +36,7 @@
       type="submit"
       class="px-4 py-2 bg-blue-500 text-white rounded-md mt-4 hover:bg-blue-700 focus:outline-none focus:bg-blue-700"
     >
-      SUBMIT
+    <a href="{% url 'panitia:scheduleList' %}">Next</a>
     </button>
   </form>
 </body>
