--- a/panitia/templates/submit_pertandingan.html
+++ b/panitia/templates/submit_pertandingan.html
@@ -16,7 +16,9 @@
         id="wasit-utama"
         class="w-full p-2 border border-gray-300 rounded-lg"
       >
-        <option value="">-- Pilih Wasit Utama --</option>
+      {% for row in dw %}
+        <option value="">{{row.0}}</option>
+        {% endfor %}
         <!-- populate with available referees -->
       </select>
     </div>
@@ -29,7 +31,9 @@
         id="wasit-pembantu1"
         class="w-full p-2 border border-gray-300 rounded-lg"
       >
-        <option value="">-- Pilih Wasit Pembantu/Hakim Garis --</option>
+      {% for row in dw %}
+      <option value="">{{row.0}}</option>
+      {% endfor %}
         <!-- populate with available referees -->
       </select>
     </div>
@@ -42,7 +46,9 @@
         id="wasit-pembantu2"
         class="w-full p-2 border border-gray-300 rounded-lg"
       >
-        <option value="">-- Pilih Wasit Pembantu/Hakim Garis --</option>
+      {% for row in dw %}
+        <option value="">{{row.0}}</option>
+        {% endfor %}
         <!-- populate with available referees -->
       </select>
     </div>
@@ -55,7 +61,9 @@
         id="wasit-cadangan"
         class="w-full p-2 border border-gray-300 rounded-lg"
       >
-        <option value="">-- Pilih Wasit Cadangan --</option>
+      {% for row in dw %}
+        <option value="">{{row.0}}</option>
+        {% endfor %}
         <!-- populate with available referees -->
       </select>
     </div>
@@ -75,7 +83,9 @@
               id="tim-1"
               class="w-full p-2 border border-gray-300 rounded-lg"
             >
-              <option value="">-- Pilih Tim --</option>
+            {% for row1 in dt1 %}
+            <option value="">{{row1.0}}</option>
+            {% endfor %}
               <!-- populate with available teams -->
             </select>
           </td>
@@ -85,7 +95,9 @@
               id="tim-2"
               class="w-full p-2 border border-gray-300 rounded-lg"
             >
-              <option value="">-- Pilih Tim --</option>
+            {% for row2 in dt2 %}
+            <option value="">{{row2.0}}</option>
+            {% endfor %}
               <!-- populate with available teams -->
             </select>
           </td>
