--- a/manager/templates/booking_list.html
+++ b/manager/templates/booking_list.html
@@ -34,12 +34,31 @@
       </table>
     </div>
     <a href="/manager/stadiumBooking">
-    <button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-5 rounded"
-    >
-      PESAN
-    </button>
-  </a>
+      <button
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-5 rounded"
+      >
+        PESAN
+      </button>
+    </a>
+    {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    {% if message == "Berhasil melakukan peminjaman stadium" %}
+    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="success">
+      <strong class="font-bold">{{message}}</strong>
+      <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+      </span>
+    </div>
+    {% else %}
+    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+      <strong class="font-bold">{{message}}</strong>
+      <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+      </span>
+    </div>
+    {% endif %}
+    {% endfor %}
+</ul>
+{% endif %}
   </div>
 </body>
 {% endblock content %}
