--- a/panitia/templates/manage_pertandingan.html
+++ b/panitia/templates/manage_pertandingan.html
@@ -8,7 +8,6 @@
 </div>
 
 {% if jumlahPertandingan %}
-<!-- Manage Pertandingan -->
 
 <div class="wrapper">
   <div class="content box-content">
@@ -74,22 +73,7 @@
   </div>
 </div>
 
-<!-- Sudah Mendapat Pemenang Akhir -->
-
-<!-- <div class="wrapper">
-            <div class="box-content">
-                <div class="content">
-                    
-                    <div class="announcement">
-                        <p>Ini Akhir Musim!<br>Klik Tombol Next untuk Membuat Pertandingan Baru</p>
-                        <div>
-                            <td><button onclick="window.location.href='#'">Next</button></td>
-                        </div>          
-                    </div>
-                </div>
-
-            </div>
-        </div> -->
+<!--case already have winner-->
 {% endif %} 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 {% endblock content %}
