--- a/panitia/templates/nota_rapat.html
+++ b/panitia/templates/nota_rapat.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container mx-auto">
   {% include 'navbar_panitia.html' %}
-  <h1 class="text-2xl font-bold my-4">
-    RAPAT PERTANDINGAN {{ team_a }} vs {{ team_b }}
+  <h1 class="text-2xl font-bold my-4 text-center">
+    RAPAT PERTANDINGAN {{ timA }} vs {{ timB }}
   </h1>
   <form
     class="max-w-md mx-auto my-8 p-8 bg-white rounded-lg shadow-lg"
