--- a/panitia/templates/nota_rapat.html
+++ b/panitia/templates/nota_rapat.html
@@ -2,11 +2,12 @@
 <div class="container mx-auto">
   {% include 'navbar_panitia.html' %}
   <h1 class="text-2xl font-bold my-4 text-center">
-    RAPAT PERTANDINGAN {{ timA }} vs {{ timB }}
+    RAPAT PERTANDINGAN {{ timA }} vs {{ timB }} {{idPertandingan}}
   </h1>
   <form
     class="max-w-md mx-auto my-8 p-8 bg-white rounded-lg shadow-lg"
-    method="post"
+    method="POST"
+    action="{% url 'panitia:prosesNotaRapat' %}"
   >
     {% csrf_token %}
     <div class="form-group">
@@ -18,6 +19,9 @@
         id="isi_rapat"
         name="isi_rapat"
       ></textarea>
+      <input type="hidden" name="idPertandingan" value="{{idPertandingan}}" />
+      <input type="hidden" name="timA" value="{{timA}}"/>
+      <input type="hidden" name="timB" value="{{timB}}"/>
     </div>
     <button
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-10"
