done dashboard for penonton

--- a/panitia/templates/dashboard_panitia.html
+++ b/panitia/templates/dashboard_panitia.html
@@ -41,34 +41,34 @@
                         <div class="grid md:grid-cols-2 text-sm">
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Depan</div>
-                                <div class="px-4 py-3">{{namaDepan}}</div>
+                                <div class="px-4 py-3">{{dataPanitia.namaDepan}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Belakang</div>
-                                <div class="px-4 py-3">{{namaBelakang}}</div>
+                                <div class="px-4 py-3">{{dataPanitia.namaBelakang}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nomor HP</div>
-                                <div class="px-4 py-3">{{nomorHP}}</div>
+                                <div class="px-4 py-3">{{dataPanitia.nomorHP}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Email</div>
-                                <div class="px-4 py-3">{{email}}</div>
+                                <div class="px-4 py-3">{{dataPanitia.email}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Alamat</div>
-                                <div class="px-4 py-3">{{alamat}}</div>
+                                <div class="px-4 py-3">{{dataPanitia.alamat}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Status</div>
                                 <div class="px-4 py-3">
-                                    {{status}}
+                                    {{dataPanitia.status}}
                                 </div>
                             </div>
                             <div class="grid grid-cols-2">
                               <div class="px-4 py-3 font-semibold">Jabatan</div>
                               <div class="px-4 py-3">
-                                {{jabatan}}
+                                {{dataPanitia.jabatan}}
                               </div>
                           </div>
                         </div>
