--- a/manager/templates/booking_list.html
+++ b/manager/templates/booking_list.html
@@ -36,7 +36,7 @@
               <button
                 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-5 rounded"
               >
-                PESAN
+                Ubah Jadwal
               </button>
             </td>
           </tr>
